feat(whitelist): Whitelist feature to control access to the server. feat(language): Language system implemented